apps/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - homepage.ganam.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 3000
